--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,8 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-native-svg-transformer": "^0.14.3"
   },
   "private": true
 }
