--- a/app/app.json
+++ b/app/app.json
@@ -17,6 +17,12 @@
       "**/*"
     ],
     "ios": {
+      "infoPlist": { 
+        "UIBackgroundModes": ["location"], 
+        "NSLocationWhenInUseUsageDescription": "text", 
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "text", 
+        "NSLocationAlwaysUsageDescription": "text" }, 
+        "buildNumber": "0.0.1",
       "supportsTablet": true
     },
     "android": {
