--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -17,8 +18,10 @@
     "expo": "~43.0.0",
     "expo-location": "~13.0.4",
     "expo-status-bar": "~1.1.0",
-    "formik": "^2.2.9",
     "expo-task-manager": "~10.0.3",
+    "firebase": "^9.5.0",
+    "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "^0.64.2",
@@ -28,9 +31,9 @@
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "yup": "^0.32.11"
-    "react-native-svg": "12.1.1",
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
