--- a/app/package.json
+++ b/app/package.json
@@ -15,12 +15,17 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@ui-kitten/components": "^5.1.1",
+    "apisauce": "^2.1.2",
     "expo": "~43.0.0",
+    "expo-app-loading": "^1.2.1",
     "expo-location": "~13.0.4",
+    "expo-secure-store": "^11.0.3",
     "expo-status-bar": "~1.1.0",
     "expo-task-manager": "~10.0.3",
     "firebase": "^9.5.0",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
+    "lottie-react-native": "^5.0.1",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -33,8 +38,7 @@
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
-    "yup": "^0.32.11",
-    "react-native-svg": "12.1.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
