--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,8 @@
     "expo": "~43.0.0",
     "expo-app-loading": "^1.2.1",
     "expo-location": "~13.0.4",
+    "expo-notifications": "^0.13.3",
+    "expo-permissions": "^13.0.3",
     "expo-secure-store": "^11.0.3",
     "expo-status-bar": "~1.1.0",
     "expo-task-manager": "~10.0.3",
