--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "apisauce": "^2.1.2",
     "expo": "~43.0.0",
     "expo-app-loading": "^1.2.1",
+    "expo-image-picker": "^11.0.3",
     "expo-location": "~13.0.4",
     "expo-notifications": "^0.13.3",
     "expo-permissions": "^13.0.3",
@@ -27,7 +28,7 @@
     "expo-status-bar": "~1.1.0",
     "expo-task-manager": "~10.0.3",
     "firebase": "^9.5.0",
-    "formik": "^2.2.9",
+    "formik": "^2.1.4",
     "jwt-decode": "^3.1.2",
     "lottie-react-native": "^5.0.1",
     "moment": "^2.29.1",
@@ -38,6 +39,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-geocoding": "^0.5.0",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
